# budgie-backgrounds

./: .gitignore  CODEOWNERS  README.md  meson.build
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml
backgrounds/: .meson.build.kate-swp  meson.build
data/: budgie-backgrounds.xml.in  meson.build
scripts/: mkRelease.sh  optimizeImage.sh
